Changed spelling of gargon to jargon

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <p><h3>What the heck is Node.js?</h3>
                     If you are a student in the web development field like myself, you may
-                    be asking yourself this question (among many others) when wading through the vast ocean of "web dev" gargon. Hopefully this blog will provide you with a little more insight into what Node.js is, and ease that feeling of sinking in an ocean of foreign knowledge.
+                    be asking yourself this question (among many others) when wading through the vast ocean of "web dev" jargon. Hopefully this blog will provide you with a little more insight into what Node.js is, and ease that feeling of sinking in an ocean of foreign knowledge.
                     <br>
                     <br>
                     Essentially, Node.js is library that acts as an interface for you as a user to be able to access Google's V8 JavaScript Runtime (a fancy way of saying a really fast JavaScript interpreter). Node allows you to download V8 and embed it for web servers. It is a command line tool made for the server side of coding with JavaScript - but is not truly JavaScript.
